deploy: 8d5f25fefd237d68dd7b9141b2559bf439d2c6e4

--- a/VandermondeMatrixwithRootsofCyclotomicPolynomialoverRingsmathbbZp.html
+++ b/VandermondeMatrixwithRootsofCyclotomicPolynomialoverRingsmathbbZp.html
@@ -183,7 +183,7 @@ to encode an integer vector into a vector of polynomial coefficients, and
 decode it back to the integer vector (<a href='BatchEncoding.html#batch-encoding'><span class='ts1-lmr10-x-x-109'>§</span>D-2.2<!-- tex4ht:ref: subsec:vandermonde-euler  --></a>).
 </p><!-- l. 344 --><p class='indent'>   <!-- l. 344 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 346 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Condition for </span><!-- l. 346 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝛍</mi></mstyle></math><span class='rm-lmbx-10x-x-109'>:</span>
-Like in CKSS, it’s worthwhile to note that the property
+Like in CKKS, it’s worthwhile to note that the property
 <!-- l. 346 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>V</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msup><mrow><mi>V</mi> </mrow><mrow><mi>T</mi> </mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>n</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msubsup><mrow><mi>I</mi></mrow><mrow><mi>n</mi></mrow><mrow><mi>R</mi></mrow></msubsup></mrow></math> does not hold
 if <!-- l. 346 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math> (denoting
 the <!-- l. 346 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>-th
