deploy: 93420f9d569a26e318ccbc08ad88bee9ab483227

--- a/ApproximateDecomposition.html
+++ b/ApproximateDecomposition.html
@@ -22,8 +22,9 @@
                                                                                          
    </figure>
 <!-- l. 127 --><p class='indent'>   If no level <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>ℓ</mi></math>
-satisfies <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup><mo class='MathClass-rel' stretchy='false'>∣</mo><mi>q</mi></mrow></math>, then
-some lower bits of <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+satisfies <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup><mo class='MathClass-rel' stretchy='false'>∣</mo><mi>q</mi></mrow></math>, then some
+lower-order digits of <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+(in base <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>)
 must be discarded during decomposition, as shown in <a href='#an-illustration-of-approximate-decomposition'>Figure 2<!-- tex4ht:ref: subsec:poly-decomp  --></a>. Such lower bits can be rounded to the nearest
 multiple of <!-- l. 127 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup></mrow></mfrac></mstyle></math>
