--- a/Definitions4.html
+++ b/Definitions4.html
@@ -19,7 +19,7 @@
 <div class='tcolorbox-content'><!-- l. 7 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>The </span><!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝐧</mi></mstyle></math><span class='rm-lmbx-10x-x-109'>-th
 Cyclotomic    Polynomial:   </span>is    a    polynomial    whose    roots    are    the    primitive
 <!-- l. 7 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-th
-root of unity, that is:
+roots of unity, that is:
 </p>
 <table class='equation-star'><tr><td>
 <!-- l. 9 --><math class='equation' display='block' xmlns='http://www.w3.org/1998/Math/MathML'><mrow>
