--- a/ImaginaryNumber.html
+++ b/ImaginaryNumber.html
@@ -10,6 +10,8 @@
 </head><body>
    <!-- l. 44 --><div class='crosslinks'><p class='noindent'>[<a href='PythagoreanIdentity.html'>prev</a>][<a href='EulersFormula.html#ImaginaryNumber.html'>parent</a>][<a href='EulersFormula1.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='imaginary-number'><span class='titlemark'>A-11.2   </span> <a id='x48-56000A-11.2'></a>Imaginary Number</h4>
+<!-- l. 44 --><p class='noindent'>n
+</p>
    <div class='tcolorbox tcolorbox' id='tcolobox-39'>     
 <div class='tcolorbox-title'>
 <!-- l. 67 --><p class='indent'>   <!-- l. 67 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Definition A-11.2</span><!-- l. 67 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
@@ -19,8 +21,10 @@
    is     defined     to     be     an     imaginary     number     that     has     the     property:
     <!-- l. 52 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>i</mi></mrow><mrow><mn>2</mn></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math>
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Complex   Number   </span>is   a   number   that   involves   imaginary   number(s)   (e.g.,
-    <!-- l. 53 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>5.6</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>i</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo> <mn>4.3</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Complex Number </span>is a number of the form <!-- l. 53 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi><mspace class='thinspace' width='0.17em'></mspace><mi>i</mi></mrow></math>,
+    where <!-- l. 53 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
+   and <!-- l. 53 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
+   are real numbers (e.g., <!-- l. 53 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>5.6</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>4.3</mn><mi>i</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
    </li>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Real  Number  </span>is  a  number  that  does  not  involve  any  imaginary  number  (e.g.,
     <!-- l. 55 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>13</mn><mo class='MathClass-punc' stretchy='false'>.</mo><mn>4</mn></mrow></math>)
@@ -35,10 +39,10 @@
       <!-- l. 59 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='false' class='mml-overline'><mrow><mi>a</mi></mrow><mo accent='true'>¯</mo></mover> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>3</mn> <mo class='MathClass-bin' stretchy='false'>−</mo> <mi>i</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo> <mn>3.4</mn></mrow></math>)
     </p></li>
     <li class='itemize'>
-    <!-- l. 61 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Hermitian      Vector     </span>is      a      vector      where      the      1st      half      of
-    its      elements      is      a      conjugate      of      the      2nd      half,      as      the
+    <!-- l. 61 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Hermitian   Vector  </span>is   a   vector   where   the   2nd   half   of   its   elements   is   the
+    complex   conjugate   of   the   1st   half   in   reverse   order,   as   illustrated   by   the
     <!-- l. 61 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-dimensional
-    vector illustrated below:
+    vector below:
     </p><!-- l. 63 --><p class='noindent'><!-- l. 63 --><math display='inline' mathvariant='bold-italic' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>(</mo><msub><mrow><mi>v</mi></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mn>2</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mn>3</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> </mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mover accent='false' class='mml-overline'><mrow><mi>v</mi></mrow><mo accent='true'>¯</mo></mover></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
