--- a/ModuloDivision.html
+++ b/ModuloDivision.html
@@ -10,10 +10,11 @@
 </head><body>
    <!-- l. 155 --><div class='crosslinks'><p class='noindent'>[<a href='Inverse.html'>prev</a>][<a href='ModuloArithmetic.html#ModuloDivision.html'>parent</a>][<a href='CenteredResidueRepresentation.html'>next</a>]</p></div>
    <h4 class='subsectionHead' id='modulo-division'><span class='titlemark'>A-1.4   </span> <a id='x9-9000A-1.4'></a>Modulo Division</h4>
-<!-- l. 158 --><p class='noindent'>In modulo arithmetic, <span class='rm-lmri-10x-x-109'>modulo division </span>is different from regular numeric division. Strictly speaking, there is no
-such thing as <span class='rm-lmri-10x-x-109'>modulo division </span>because the modulo operation itself is a form of division that returns only the
-remainder. In practice, one uses “modulo division” to mean multiplying by a modular inverse when it exists, i.e.,
-when <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi class='qopname'>gcd</mi><mo> ⁡<!-- FUNCTION APPLICATION --> </mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>. <span class='rm-lmri-10x-x-109'>Modulo
+<!-- l. 158 --><p class='noindent'>In modulo arithmetic, <span class='rm-lmri-10x-x-109'>modulo division </span>is different from regular numeric division.
+Strictly speaking, there is no separate operation called “modulo division”, because the
+modulo operation already returns only the remainder of a division. In practice, one uses
+“modulo division” to mean multiplying by a modular inverse when it exists, i.e., when
+<!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi class='qopname'>gcd</mi><mo> ⁡<!-- FUNCTION APPLICATION --> </mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>. <span class='rm-lmri-10x-x-109'>Modulo
 division </span>of <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
 by <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math> modulo
 <!-- l. 158 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is equivalent to computing
