--- a/NumberDecomposition.html
+++ b/NumberDecomposition.html
@@ -27,13 +27,14 @@ as follows:
 level. We assume <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup><mo class='MathClass-rel' stretchy='false'>∣</mo><mi>q</mi></mrow></math>
 and take digits <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>γ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>∈</mo><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mo>…</mo><mo class='MathClass-punc' stretchy='false'>,</mo><mi>β</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>;
 under these conditions, the decomposition is unique. This is visually shown in <a href='#an-illustration-of-number-decomposition'>Figure 1<!-- tex4ht:ref: subsec:coeff-rotation  --></a>. (If
-<!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>∤</mo> <mi>q</mi></mrow></math>, see <a href='ApproximateDecomposition.html#approximate-decomposition'><span class='ts1-lmr10-x-x-109'>§</span>A-6.3<!-- tex4ht:ref: subsec:coeff-rotation  --></a>.)
-Each <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>γ</mi></mrow><mrow><mi>i</mi></mrow></msub></math> represents
+<!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>ℓ</mi></mrow></msup> <mo class='MathClass-rel' stretchy='false'>∤</mo> <mi>q</mi></mrow></math>, see <a href='ApproximateDecomposition.html#approximate-decomposition'><span class='ts1-lmr10-x-x-109'>§</span>A-6.3<!-- tex4ht:ref: subsec:coeff-rotation  --></a>.) Each
+<!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>γ</mi></mrow><mrow><mi>i</mi></mrow></msub></math> is a digit in the
                                                                                          
                                                                                          
-a base-<!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> digit at
-position <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>i</mi></math>. When
-<!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is a power of two, this
+base-<!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math> representation
+of <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>γ</mi></math>, where
+<!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math> is the most significant digit.
+When <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> is a power of two, this
 corresponds to a shift by <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msub><mrow><mi class='loglike'>log</mi><mo>⁡<!-- FUNCTION APPLICATION --></mo><!-- nolimits --></mrow><mrow><mn>2</mn></mrow></msub><mi>β</mi></mrow></math>
 bits.
 </p>
