--- a/Theorems.html
+++ b/Theorems.html
@@ -15,12 +15,13 @@
 <!-- l. 46 --><p class='indent'>   <!-- l. 46 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem A-3.3</span><!-- l. 46 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>Field Theorems</span></p></div> 
 <div class='tcolorbox-content'>   <dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
-1.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Size  of  Finite  Field:  </span>Every  finite  field  is  called  a  Galois  Field  and  it  has
+1.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Size   of   Finite   Field:  </span>Every   finite   field   (also   called   a   Galois   Field)   has
     <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
     elements for some prime <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
    and positive integer <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>,
-    conversely, for each <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
-    there exists a finite field of that size (unique up to isomorphism).
+    conversely, for each such prime power <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>,
+    there exists a finite field of order <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
+    (unique up to isomorphism).
     </dd><dt class='enumerate-enumitem'>
 2.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Isomorphic Fields: </span>Any two finite fields <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub></math>
      and <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></math>
