--- a/EncryptionandDecryption1.html
+++ b/EncryptionandDecryption1.html
@@ -68,7 +68,8 @@ gets eliminated by the rounding process)
    </mrow><mrow><mo class='MathClass-open' stretchy='false'>⌊</mo><mfrac><mrow><mi>q</mi></mrow>
 <mrow><mi>t</mi></mrow></mfrac> <mo class='MathClass-close' stretchy='false'>⌋</mo>  </mrow></mfrac></mstyle><mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle></mrow></math>
-    <span style='color:#FF0000;'> # <!-- l. 343 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>k</mi></mrow><mrow><mi>i</mi></mrow></msub><mi>t</mi></mrow></math>
+    <span style='color:#FF0000;'> <!-- l. 343 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-rel' stretchy='false'>▹</mo></math>
+  <!-- l. 343 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>k</mi></mrow><mrow><mi>i</mi></mrow></msub><mi>t</mi></mrow></math>
    accounts for the plaintext <!-- l. 343 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>m</mi></mrow><mrow><mi>i</mi></mrow></msub></math>’s
     wrapped-around value as multiples of <!-- l. 343 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math></span>
 </p>
