--- a/EncryptionandDecryption2.html
+++ b/EncryptionandDecryption2.html
@@ -9,7 +9,7 @@
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
    <!-- l. 461 --><div class='crosslinks'><p class='noindent'>[<a href='EncodingandDecoding.html'>prev</a>][<a href='CKKSScheme.html#EncryptionandDecryption2.html'>parent</a>][<a href='CiphertexttoCiphertextAddition1.html'>next</a>]</p></div>
-   <h4 class='subsectionHead' id='encryption-and-decryption2'><span class='titlemark'>D-3.2   </span> <a id='x129-177000D-3.2'></a>Encryption and Decryption</h4>
+   <h4 class='subsectionHead' id='encryption-and-decryption2'><span class='titlemark'>D-3.2   </span> <a id='x129-178000D-3.2'></a>Encryption and Decryption</h4>
 <!-- l. 464 --><p class='noindent'>CKKS’s encryption and decryption schemes are similar to BFV’s encryption and decryption schemes
 (Summary D-2.3 in <a href='EncryptionandDecryption1.html#encryption-and-decryption1'><span class='ts1-lmr10-x-x-109'>§</span>D-2.3<!-- tex4ht:ref: subsec:bfv-enc-dec  --></a>).
 </p>
@@ -40,7 +40,8 @@ or ternary (i.e., <!-- l. 471 --><math display='inline' xmlns='http://www.w3.org
 <mrow><mi mathvariant='normal'>Δ</mi></mrow></mfrac> </mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo><msub><mrow> <mrow><mo fence='true' form='prefix'>⌈</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi><mi>M</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>E</mi>
     </mrow><mrow><mi mathvariant='normal'>Δ</mi>    </mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow><mrow><mfrac><mrow><mn>1</mn></mrow>
 <mrow><mi mathvariant='normal'>Δ</mi></mrow></mfrac> </mrow></msub> <mo class='MathClass-rel' stretchy='false'>≈</mo><mi>M</mi></mrow></math>
-</p><!-- l. 493 --><p class='noindent'><span style='color:#FF0000;'># <!-- l. 493 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>⌈</mo><mi>x</mi><msub><mrow><mo class='MathClass-close' stretchy='false'>⌋</mo></mrow><mrow><mi>k</mi></mrow></msub></mrow></math> means rounding
+</p><!-- l. 493 --><p class='noindent'><span style='color:#FF0000;'> <!-- l. 493 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-rel' stretchy='false'>▹</mo></math>
+<!-- l. 493 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>⌈</mo><mi>x</mi><msub><mrow><mo class='MathClass-close' stretchy='false'>⌋</mo></mrow><mrow><mi>k</mi></mrow></msub></mrow></math> means rounding
 <!-- l. 493 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math> to the nearest
 multiple of <!-- l. 493 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math></span>
 </p><!-- l. 498 --><p class='noindent'><!-- l. 498 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
