deploy: 415c9da6f4160be670442825cc59ed19c240cd8b

--- a/HomomorphicRotationofInputVectorSlots.html
+++ b/HomomorphicRotationofInputVectorSlots.html
@@ -966,7 +966,7 @@ which is equivalent to homomorphically rotating the encrypted input vector slots
 would output <!-- l. 1848 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></mrow><mrow><mi>r</mi></mrow></msub></math>.
 </p><!-- l. 1850 --><p class='indent'>   <!-- l. 1850 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 1855 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Source Code: </span>Examples of BFV’s batch encoding and homomorphic input vector rotation can be
-executed by running <a href='https://github.com/fhetextbook/fhe-textbook/blob/main/source%20code/bfv.py'><span class='underline'>this Python script (BFV addition and rotation)</span></a> and <a href='https://github.com/fhetextbook/fhetextbook.github.io/blob/main/source%20code/bfv_rotation_only.py'><span class='underline'>this one (BFV rotation only)</span></a>.
+executed by running <a href='https://github.com/fhetextbook/fhe-textbook/blob/main/source%20code/bfv.py'><span class='underline'>this Python script</span></a>.
                                                                                          
                                                                                          
 </p>
