deploy: a14b9e83ea2b7587ee5fdc491c9adc8135ccc5b2

--- a/Discussion.html
+++ b/Discussion.html
@@ -46,7 +46,7 @@ that, we can correctly recover <!-- l. 81 --><math display='inline' xmlns='http:
 by computing <!-- l. 81 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'> <mrow><mo fence='true' form='prefix'>⌈</mo><mrow><mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi><mi>M</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>E</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi>
         </mrow><mrow><mi mathvariant='normal'>Δ</mi>        </mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></math>,
 eliminating the noise <!-- l. 81 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi></math>.
-However, as we explained in Summary B-2.3.1 in <a href='Decryption.html#in-the-case-of-t-not-dividing-q'><span class='ts1-lmr10-x-x-109'>§</span>B-2.3.1<!-- tex4ht:ref: subsubsec:scaling-factor-computation  --></a>), if the error bound
+However, as we explained in Summary <span class='rm-lmbx-10x-x-109'>??</span> in <span class='rm-lmbx-10x-x-109'>??</span>), if the error bound
 <!-- l. 81 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='italic'>𝑘𝑡</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>e</mi>
  </mrow><mrow><mo class='MathClass-open' stretchy='false'>⌊</mo><mfrac><mrow><mi>q</mi></mrow>
 <mrow><mi>t</mi></mrow></mfrac> <mo class='MathClass-close' stretchy='false'>⌋</mo> </mrow></mfrac></mstyle> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
